# smoothing_image-cpp

./: CMakeLists.txt
CMake_scripts/: Settings_smoothing_image.cmake  Settings_smoothing_image_dll.cmake  Settings_smoothing_image_unit_tests.cmake
smoothing_image/src/: main.cpp
smoothing_image_dll/include/: smoothing_image_dll.hpp
smoothing_image_dll/src/: smoothing_image_dll.cpp
smoothing_image_unit_tests/src/: main.cpp
